# landestate

./: .gitignore  API_DOCUMENTATION.md  DATABASE_SCHEMA.md  ENDPOINT_DESIGN_PATTERN.md  FILE_STRUCTURE_GUIDE.md  INDEX.md  LEARNING_SUMMARY.md  PUSH_READY.txt  QUICK_START.md  README.md  TASK_1_COMPLETE.md  VISUAL_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  .dockerignore  Dockerfile  FILES_CREATED_SUMMARY.txt  FILE_INDEX.md  PHASE_1_ACTIONABLE_TODOS.md  PHASE_1_DETAILED_TODOS.md  PHASE_1_SUMMARY_FOR_YOU.txt  PYTEST_SETUP_SUMMARY.txt  SETUP_COMPLETE_GUIDE.md  START_HERE.txt  alembic.ini  init_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 00e87037fd1b_add_property_images_table.py  49554c0434e1_initial_schema.py
backend/app/: celery_app.py  main.py  tasks.py
backend/app/api/: dependencies.py  routes.py
backend/app/api/v1/: __init__.py  auth.py  locations.py  properties.py  reviews.py  users.py  users_endpoints.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  locations.py  properties.py  reviews.py  user.py
backend/app/schemas/: auth.py  common.py  locations.py  property.py  reviews.py
backend/app/services/: s3.py
backend/backvenv/: pyvenv.cfg
backend/backvenv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
backend/tests/: PYTEST_BASICS_GUIDE.md  PYTEST_QUICK_REFERENCE.md  conftest.py  test_auth_basics.py  test_locations.py  test_main.py  test_properties.py  test_review.py  test_s3_service.py  test_tasks.py
docs/: _config.yml  index.md
frontend/: .gitignore  README.md  index.html  (+1 more)
(+3 files in other folders)
